--- a/shop.html
+++ b/shop.html
@@ -87,8 +87,8 @@
                 <div class="col-lg-6 col-md-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Trang chủ</a></li>
-                            <li><a href="./shop.html">Cửa hàng</a></li>
+                            <li class=""><a href="./index.html">Trang chủ</a></li>
+                            <li class=""><a href="./shop.html">Cửa hàng</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./about.html">About Us</a></li>
@@ -98,8 +98,8 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li> -->
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Liên hệ</a></li>
+                            <li class=""><a href="./blog.html">Blog</a></li>
+                            <li class=""><a href="./contact.html">Liên hệ</a></li>
                         </ul>
                     </nav>
                 </div>
