--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -186,6 +185,25 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="card">
+                                    <div class="card-heading">
+                                        <a data-toggle="collapse" data-target="#collapseThree">Màu sắc</a>
+                                    </div>
+                                    <div id="collapseThree" class="collapse show" data-parent="#accordionExample">
+                                        <div class="card-body">
+                                            <div class="shop__sidebar__price">
+                                                <ul>
+                                                    <li><a href="#">Trắng</a></li>
+                                                    <li><a href="#">Đen</a></li>
+                                                    <li><a href="#">Vàng</a></li>
+                                                    <li><a href="#">Hồng</a></li>
+                                                    <li><a href="#">Mix Trắng Đen</a></li>
+                                                    <li><a href="#">Mix Cầu Vòng</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -202,9 +220,8 @@
                                 <div class="shop__product__option__right">
                                     <p>Sắp xếp theo giá:</p>
                                     <select>
-                                        <option value="">Low To High</option>
-                                        <option value=""><1.000.000đ></option>
-                                        <option value="">Lớn hơn</option>
+                                        <option value="">Cao - Thấp</option>
+                                        <option value="">Thấp - Cao</option>
                                     </select>
                                 </div>
                             </div>
