--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img/shop/logomain.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -591,7 +591,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="img/shop/logomain.png" alt=""></a>
                         </div>
                         <p>Thương hiệu giày bán chạy hàng đầu Việt Nam.</p>
                         <a href="#"><img src="img/payment.png" alt=""></a>
