--- a/authentication.html
+++ b/authentication.html
@@ -20,7 +20,7 @@
     <script src="js/login.js"></script>
 	<style>
 		body {
-			background-image: url(/img/login/pexels-mnz-1598505);
+			background-image: url(img/login/pexels-mnz-1598505.jpg);
 			background-size: cover;
 		}
 	</style>
