--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
         <div class="offcanvas__option">
             <div class="offcanvas__links">
                 <a href="#">Đăng nhập</a>
+                <a href="#">Đăng xuất</a>
             </div>
         </div>
         <div class="offcanvas__nav__option">
@@ -41,7 +42,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__text">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
+            <p>Miễn phí vận chuyển, đổi trả trong vòng 1 tuần</p>
         </div>
     </div> 
     <!-- Offcanvas Menu End -->
@@ -71,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img/shop/logomain.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -108,7 +109,6 @@
         </div>
     </header>
     <!-- Header Section End -->
-
 
     <!-- Map Begin -->
     <div class="map">
@@ -157,14 +157,14 @@
     </section>
     <!-- Contact Section End -->
 
-     <!-- Footer Section Begin -->
-     <footer class="footer">
+    <!-- Footer Section Begin -->
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="img/shop/logomain.png" alt=""></a>
                         </div>
                         <p>Thương hiệu giày bán chạy hàng đầu Việt Nam.</p>
                         <a href="#"><img src="img/payment.png" alt=""></a>
@@ -210,6 +210,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
 
     <!-- Search Begin -->
     <div class="search-model">
