--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
 
     <!-- Css Styles -->
+    <link rel="shortcut icon" type="image" href="img/shop/logomain.png"/>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
@@ -31,6 +32,7 @@
         <div class="offcanvas__option">
             <div class="offcanvas__links">
                 <a href="#">Đăng nhập</a>
+                <a href="#">Đăng xuất</a>
             </div>
         </div>
         <div class="offcanvas__nav__option">
@@ -41,7 +43,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__text">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
+            <p>Miễn phí vận chuyển, đổi trả trong vòng 1 tuần</p>
         </div>
     </div> 
     <!-- Offcanvas Menu End -->
@@ -59,7 +61,7 @@
                     <div class="col-lg-6 col-md-5">
                         <div class="header__top__right">
                             <div class="header__top__links">
-                                <a href="#">Đăng nhập</a>
+                                <a href="authentication.html">Đăng nhập</a>
                                 <a href="#">Đăng xuất</a>
                             </div>
                         </div>
@@ -97,7 +99,7 @@
                     <div class="header__nav__option">
                         <div class="header__nav-username">Hi!<b> Bro</b></div>
                         <div class="header__nav-avatar">
-                            <a href=""><img src="img/shop/For-Men.png" alt=""></a>
+                            <a href="profile.html"><img src="img/shop/For-Men.png" alt=""></a>
                         </div>
                         <a href="shopping-cart.html"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                         <div class="price">$0.00</div>
@@ -509,7 +511,7 @@
     <!-- Product Section End -->
 
 
-    <!-- Instagram Section Begin -->
+    <!-- Content Section Begin -->
     <section class="instagram spad">
         <div class="container">
             <div class="row">
@@ -535,9 +537,9 @@
             </div>
         </div>
     </section>
-    <!-- Instagram Section End -->
+    <!-- Content Section End -->
 
-    <!-- Latest Blog Section Begin -->
+    <!--  Blog Section Begin -->
     <section class="latest spad">
         <div class="container">
             <div class="row">
@@ -582,7 +584,7 @@
             </div>
         </div>
     </section>
-    <!-- Latest Blog Section End -->
+    <!--  Blog Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer">
