--- a/shop-details.html
+++ b/shop-details.html
@@ -25,17 +25,13 @@
 </head>
 
 <body>
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
-
     <!-- Menu Mobile Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__option">
             <div class="offcanvas__links">
                 <a href="#">Đăng nhập</a>
+                <a href="#">Đăng xuất</a>
             </div>
         </div>
         <div class="offcanvas__nav__option">
@@ -46,9 +42,9 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__text">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
+            <p>Miễn phí vận chuyển, đổi trả trong vòng 1 tuần</p>
         </div>
-    </div>
+    </div> 
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
@@ -76,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img/shop/logomain.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -85,14 +81,14 @@
                             <li class=""><a href="./index.html">Trang chủ</a></li>
                             <li class=""><a href="./shop.html">Cửa hàng</a></li>
                             <!-- <li><a href="#">Pages</a>
-                                 <ul class="dropdown">
-                                     <li><a href="./about.html">About Us</a></li>
-                                     <li><a href="./shop-details.html">Shop Details</a></li>
-                                     <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                     <li><a href="./checkout.html">Check Out</a></li>
-                                     <li><a href="./blog-details.html">Blog Details</a></li>
-                                 </ul>
-                             </li> -->
+                                <ul class="dropdown">
+                                    <li><a href="./about.html">About Us</a></li>
+                                    <li><a href="./shop-details.html">Shop Details</a></li>
+                                    <li><a href="./shopping-cart.html">Shopping Cart</a></li>
+                                    <li><a href="./checkout.html">Check Out</a></li>
+                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                </ul>
+                            </li> -->
                             <li class=""><a href="./blog.html">Blog</a></li>
                             <li class=""><a href="./contact.html">Liên hệ</a></li>
                         </ul>
@@ -490,14 +486,14 @@
         </section>
         <!-- Related Section End -->
 
-        <!-- Footer Section Begin -->
+    <!-- Footer Section Begin -->
     <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="img/shop/logomain.png" alt=""></a>
                         </div>
                         <p>Thương hiệu giày bán chạy hàng đầu Việt Nam.</p>
                         <a href="#"><img src="img/payment.png" alt=""></a>
@@ -543,6 +539,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
 
         <!-- Search Begin -->
         <div class="search-model">
