--- a/shop-details.html
+++ b/shop-details.html
@@ -227,7 +227,7 @@
                                             <input type="radio" id="sp-9">
                                         </label>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="product__details__cart__option">
                                     <div class="quantity">
                                         <div class="pro-qty">
@@ -239,7 +239,7 @@
 
                                 <div class="product__details__last__option">
                                     <h5><span>Guaranteed Safe Checkout</span></h5>
-                                    <img src="img/shop-details/details-payment.png" alt=""> -->
+                                    <img src="img/shop-details/details-payment.png" alt=""> 
 
                             </div>
                         </div>
@@ -473,6 +473,7 @@
             </div>
         </div>
         <!-- Search End -->
+        <!-- API -->
         <script src="js-test/shop-details.js"></script>
 
         <!-- Js Plugins -->
@@ -486,8 +487,6 @@
         <script src="js/mixitup.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- API -->
 </body>
 
 </html>
