--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="fonts/fontawesome-free-6.2.0-web/css/all.min.css">
+    <!-- <link rel="stylesheet" href="fonts/fontawesome-free-6.2.0-web/css/all.min.css"> -->
 </head>
 
 <body>
