--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Male-Fashion | Template</title>
+    <title>Somore</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
@@ -132,19 +132,19 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody class="shopping-cart-item">                            
+                            <tbody class="shopping-cart-item" >                            
                             </tbody>
                         </table>
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="continue__btn">
-                                <a href="shop.html">Tiếp tục mua sắm</a>
+                                <!-- <a href="shop.html">Tiếp tục mua sắm</a> -->
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="continue__btn update__btn">
-                                <a href="#"><i class="fa fa-spinner"></i>Cập nhật giỏ hàng</a>
+                                <a href="shop.html">Tiếp tục mua sắm</a>
                             </div>
                         </div>
                     </div>
