--- a/admin/categories.html
+++ b/admin/categories.html
@@ -160,7 +160,7 @@
                     <tr>
                       <th>ID</th>
                       <th>Name</th>
-                      <th>Description</th>
+         
                       <th></th>
                       <th></th>
                     </tr>
@@ -246,7 +246,7 @@
 
   <!-- Main JS -->
   <script src="./assets/js/main.js"></script>
-
+  <script src="assets/js/API/category.js"></script>
   <!-- Active Menu Item -->
   <script>
     document.getElementById('menu-managements').classList.add('active', 'open')
