--- a/admin/product-details.html
+++ b/admin/product-details.html
@@ -180,46 +180,7 @@
                           </tr>
                         </thead>
                         <tbody class="table-border-bottom-0">
-                          <tr>
-                            <td>product01Sblack</td>
-                            <td>blank</td>
-                            <td>S</td>
-                            <td>Black</td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>450.000</strong></td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>390.000</strong></td>
-                            <td><a href="./update-product-details.jsp">Change</a></td>
-                            <td><a href="#" class="text-danger">Delete</a></td>
-                          </tr>
-                          <tr>
-                            <td>product01Mblack</td>
-                            <td>blank</td>
-                            <td>M</td>
-                            <td>Black</td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>450.000</strong></td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>390.000</strong></td>
-                            <td><a href="./update-product-details.jsp">Change</a></td>
-                            <td><a href="#" class="text-danger">Delete</a></td>
-                          </tr>
-                          <tr>
-                            <td>product01Lblack</td>
-                            <td>blank</td>
-                            <td>L</td>
-                            <td>Black</td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>450.000</strong></td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>390.000</strong></td>
-                            <td><a href="./update-product-details.jsp">Change</a></td>
-                            <td><a href="#" class="text-danger">Delete</a></td>
-                          </tr>
-                          <tr>
-                            <td>product01XLblack</td>
-                            <td>blank</td>
-                            <td>XL</td>
-                            <td>Black</td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>450.000</strong></td>
-                            <td><i class="fab fa-angular fa-lg text-danger"></i> <strong>390.000</strong></td>
-                            <td><a href="./update-product-details.jsp">Change</a></td>
-                            <td><a href="#" class="text-danger">Delete</a></td>
-                          </tr>
+                          
                         </tbody>
                       </table>
                       <div class="d-flex justify-content-center my-3">
@@ -277,7 +238,7 @@
 
     <!-- Main JS -->
     <script src="./assets/js/main.js"></script>
-
+    <script src="assets/js/API/product_detail.js"></script>
     <!-- Active Menu Item -->
     <script>
       document.getElementById('menu-managements').classList.add('active', 'open')
