--- a/admin/products.html
+++ b/admin/products.html
@@ -161,7 +161,7 @@
                       <th>ID</th>
                       <th>Category</th>
                       <th>Name</th>
-                      <th>Details</th>
+
                       <th></th>
                       <th></th>
                     </tr>
@@ -244,6 +244,7 @@
   <!-- Main JS -->
   <script src="./assets/js/main.js"></script>
 
+  <script src="assets/js/API/product.js"></script>
   <!-- Page JS -->
 
   <!-- Active Menu Item -->
