--- a/admin/update-category.html
+++ b/admin/update-category.html
@@ -255,7 +255,7 @@
 
     <!-- Main JS -->
     <script src="./assets/js/main.js"></script>
-
+    <script src="assets/js/API/category.js"></script>
     <!-- Active Menu Item -->
     <script>
       document.getElementById('menu-managements').classList.add('active', 'open')
