--- a/admin/update-product-details.html
+++ b/admin/update-product-details.html
@@ -277,7 +277,7 @@
 
     <!-- Main JS -->
     <script src="./assets/js/main.js"></script>
-
+    <script src="assets/js/API/product.js"></script>
     <!-- Active Menu Item -->
     <script>
       document.getElementById('menu-managements').classList.add('active', 'open')
